Redirects correctly when searching now, added title in cloud tags

--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,14 @@
           background: #2d2c3e;
       }
     </style>
-    <title>Lightence Admin</title>
+    <title>Analytix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root">
       <div id="initSpinner">
-        <img src="%PUBLIC_URL%/spinners/spinner.svg" alt="Loading..." />
+        <img src="%PUBLIC_URL%/spinners/spinner.svg" alt="Загрузка..." />
       </div>
     </div>
     <!--
