added meta yandex search

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="analytix аналитикс сервис поиск контрагентов информация графики Беларусь" />
     <meta itemprop="title" content="Analytix" />
     <meta itemprop="description" content="Analytix - сервис для поиска контрагентов." />
+    <meta name="yandex-verification" content="8165fd151ce42721" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
