--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,12 @@
           background: #2d2c3e;
       }
     </style>
+
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
+
     <title>Analytix</title>
   </head>
   <body>
