--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/themes/main.css"  type = "text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Analytix - сервис для поиска контрагентов" />
-    <meta name="keywords" content="analytix аналитикс сервис поиск контрагентов информация графики Беларусь" />
+    <meta name="description" content="Analytix - это современный и мощный сервис, специально разработанный для поиска и анализа контрагентов. Он предоставляет широкий спектр инструментов и возможностей, позволяющих компаниям находить надежных партнеров, минимизировать риски и принимать обоснованные бизнес-решения." />
+    <meta name="keywords" content="analytix analytix.by аналитикс.бу аналитикс сервис поиск контрагентов информация графики Беларусь" />
     <meta itemprop="title" content="Analytix" />
-    <meta itemprop="description" content="Analytix - сервис для поиска контрагентов." />
+    <meta itemprop="description" content="Analytix - это современный и мощный сервис, специально разработанный для поиска и анализа контрагентов. Он предоставляет широкий спектр инструментов и возможностей, позволяющих компаниям находить надежных партнеров, минимизировать риски и принимать обоснованные бизнес-решения." />
     <meta name="yandex-verification" content="8165fd151ce42721" />
     <link
       rel="stylesheet"
