added google verification

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="analytix analytix.by аналитикс.бу аналитикс сервис поиск контрагентов информация графики Беларусь" />
     <meta itemprop="title" content="Analytix" />
     <meta itemprop="description" content="Analytix - это современный и мощный сервис, специально разработанный для поиска и анализа контрагентов. Он предоставляет широкий спектр инструментов и возможностей, позволяющих компаниям находить надежных партнеров, минимизировать риски и принимать обоснованные бизнес-решения." />
+    <meta name="google-site-verification" content="t3Olb0F71IGCGDXDPBYyoJfV9gxYXhpolBk0-zHcUrk" />
     <meta name="yandex-verification" content="8165fd151ce42721" />
     <link
       rel="stylesheet"
